Fix! - Selector `elementor:after` added spacing after the content

--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -6,6 +6,8 @@
 	&:after {
 		position: absolute;
 		opacity: 0;
+		width: 0;
+		height: 0;
 
 		@media (min-width: $screen-lg-min) {
 			content: 'desktop';
